# sayer

./: .gitignore  README.md  Taskfile.yaml  mkdocs.yaml  mkdocs.yml  pyproject.toml
._github/ISSUE_TEMPLATE/: config.yml
.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
.github/workflows/: codspeed.yml  publish.yml  test-suite.yml
docs/: contributing.md  getting-started.md  index.md  release-notes.md  sponsorship.md  start-here.md  troubleshooting.md
docs/api-reference/: encoders.md  middleware.md  params.md  sayer.md
docs/api-reference/conf/: global-settings.md  settings.md
docs/api-reference/core/: commands.md  engine.md  groups.md  logging.md  pluggins.md  plugins.md
docs/api-reference/utils/: config.md  console.md  loader.md  ui-helpers.md  ui.md
docs/concepts/: architecture.md  command-lifecycle.md  index.md  middleware-model.md  parameter-system.md  state-and-injection.md
docs/features/: builtin-commands.md  callbacks.md  commands.md  context-injection.md  encoders.md  groups.md  logging.md  middleware.md  params.md  pluggins.md  plugins.md  sayer-and-apps.md  settings.md  state.md  terminal-helpers.md  testing.md
docs/how-to/: add-a-command.md  build-plugin.md  index.md  organize-groups-subapps.md  test-cli.md  use-parameters.md
docs/statics/: logo-white
docs/stylesheets/: extra.css
docs/tutorials/: 01-first-cli.md  02-multi-command-app.md  03-state-middleware-testing.md  index.md
docs/workflows/: dev-loop.md
docss/: index.md
sayer/: __init__.py  __main__.py  __version__.py  app.py  client.py  config.py  core.py  docs.py  encoders.py  help.py  logging.py  middleware.py  params.py  plugins.py  runner.py  state.py  testing.py  ui.py  ui_helpers.py
sayer/cli/: docs.py  new.py
sayer/conf/: global_settings.py
sayer/core/: client.py  engine.py  groups.py  handlers.py  help.py  plugins.py  utils.py
sayer/core/commands/: base.py  markdown.py  sayer.py
sayer/core/console/: loader.py  markdown.py  sayer.py
sayer/core/groups/: base.py  markdown.py  sayer.py
sayer/utils/: coercion.py  coersion.py  config.py  console.py  loader.py  ui.py
scripts/: clean  docs.py  docs_pipeline.py  install  publish
tests/: conftest.py  settings.py  test_add_command.py  test_async.py  test_callback.py  test_coercion.py  test_command_wrapping.py  test_context_injection.py  test_convert_cli_value_to_type.py  test_convert_types.py  test_core.py  test_custom_commands.py  test_defaults.py  test_dynamic_default_factory.py  test_encoders.py  test_errors.py  test_groups.py  test_groups_custom.py  test_logging.py  test_middleware.py  test_natural_command.py  test_option_argument_flag.py  test_params.py  test_sayer_client.py  test_sequence_list.py  test_silent_parameter.py  test_state.py  test_subapps.py  test_tooling_configs.py  test_types.py  test_ui.py  test_veridiac_and_none.py
tests/benchmarks/: test_benchmarks.py
tests/capture/: test_direct_command_capture_extra_args.py  test_run_captures_unknown_flags.py
tests/injectors/: test_inject_with_custom_fields.py
