[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sayer"
description = "The click running on steroids"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Tiago Silva", email = "tiago@tarsild.io" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "anyio>=4.9.0",
    "click>=8.3.1,<9.0.0",
    "monkay>=0.4.2",
    "rich>=14.0.0",
    "typing_extensions>=4.13.2",
]

keywords = [
    "cli",
    "click",
    "command-line",
    "serialization",
    "json",
    "dataclass",
    "pydantic",
    "attrs",
    "msgspec",
    "sayer",
    "rich",
]

[project.urls]
Homepage = "https://github.com/dymmond/sayer"
Documentation = "https://sayer.dymmond.com"
Changelog = "https://sayer.dymmond.com/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/dymmond/sayer"

[tool.hatch.version]
path = "sayer/__version__.py"

[tool.hatch.envs.default]
dependencies = [
    "ty",
    "ruff>=0.3.0,<5.0.0",
    "pre-commit>=3.3.1,<4.0.0",
    "devtools>=0.12.2",
    "ipython",
    "ptpython",
    "twine",
    "ipdb",
]

[project.optional-dependencies]
testing = [
    "anyio[trio]>=4.9.0,<6.0.0",
    "pytest-asyncio>=0.26.0",
    "autoflake>=2.0.2,<3.0.0",
    "black==24.1.1,<25.0",
    "isort>=5.12.0,<6.0.0",
    "pytest>=7.2.2,<9.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "ipdb",
    "pydantic",
    "attrs",
    "msgspec",
    "pytest-codspeed>=4.3.0",
    "ty",
]
docs = [
    "zensical>=0.0.23,<0.1.0",
    "mkdocs-meta-descriptions-plugin>=2.3.0",
    "pyyaml>=6.0,<7.0.0",
]

[project.scripts]
sayer = "sayer.__main__:run"

[tool.hatch.envs.default.scripts]
clean_pyc = "find . -type f -name \"*.pyc\" -delete"
clean_pyi = "find . -type f -name \"*.pyi\" -delete"
clean_pycache = "find . -type d -name \"*__pycache__*\" -delete"
build_with_check = "hatch build; twine check dist/*"
check_types = "ty check --error-on-warning sayer"
lint = "ruff check --fix --line-length 99 sayer tests {args} && ty check --error-on-warning sayer"
format = "hatch fmt && hatch fmt --check && ty check --error-on-warning sayer"

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
prepare = "scripts/docs.py prepare"
clean = "scripts/docs.py clean"
build = "scripts/docs.py build --clean"
serve = "scripts/docs.py serve"
dev = "scripts/docs.py serve"

[tool.hatch.envs.test]
features = ["testing"]

[tool.hatch.envs.hatch-test.env-vars]
SAYER_SETTINGS_MODULE = "tests.settings.TestSettings"

[tool.hatch.envs.hatch-test]
features = ["testing"]
template = "test"
#extra-dependencies = ["msgspec@git+https://github.com/jcrist/msgspec.git ; python_version >= '3.14.0'"]

[tool.hatch.envs.test.scripts]
# needs docker services running
test = "hatch test -- {args}"
test_man = "hatch test -- {args} -s -vv"
check_types = "ty check --error-on-warning sayer"

[tool.hatch.envs.hatch-static-analysis]
# disables custom ruff rules, required to align with pre-commit
config-path = "none"
dependencies = ["ruff==0.12.2"]

[tool.isort]
profile = "black"
known_third_party = []
src_paths = ["sayer"]

[tool.ty]

[tool.ty.src]
exclude = ["docs_src/"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"
possibly-missing-attribute = "ignore"
unresolved-attribute = "ignore"
call-top-callable = "ignore"
call-non-callable = "ignore"
invalid-type-form = "ignore"
invalid-parameter-default = "ignore"
invalid-method-override = "ignore"
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
conflicting-declarations = "ignore"
unknown-argument = "ignore"
unsupported-operator = "ignore"
invalid-await = "ignore"
no-matching-overload = "ignore"
not-iterable = "ignore"
parameter-already-assigned = "ignore"
redundant-cast = "ignore"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I"]
ignore = ["E501", "B008", "C901", "B026"]

exclude = ["docs_src/"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.coverage.run]
parallel = true
context = '${CONTEXT}'
source = ["tests", "sayer"]
# omit = []

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = ["/sayer"]
